--- a/assignment-five/public/stylesheets/style.css
+++ b/assignment-five/public/stylesheets/style.css
@@ -14,3 +14,14 @@
     padding: 20px;
     border-radius: 20px;
 }
+
+.icon {
+    width: 30px;
+}
+
+.icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 60px 10px 0;
+}
