--- a/assignment-five/public/stylesheets/style.css
+++ b/assignment-five/public/stylesheets/style.css
@@ -23,5 +23,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 60px 10px 0;
+    padding: 5px 60px 10px 0;
+}
+
+span {
+    color: #91979d;
+    font-size: small;
+    font-weight: 200;
 }
